2001-08-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in:
	* win/makefile.vc: updated install target for dde1.2
	* doc/dde.n: fixed dde man page (which was totally incorrect).
	* tests/winDde.test:
	* win/tclWinDde.c (Tcl_DdeObjCmd): added -binary option to dde
	request command to allow for returning binary data. [Bug #227482]
	Updated dde to 1.2

	* tests/tcltest.test: added unixExecs constraint to files that
	used 'grep' in the test. [Bug #453143]

	* library/tcltest/tcltest.tcl: fixed stdio constraint test.
	[Patch #454050] (stanton)
	Simplified unixExecs constriant test. 
	
2001-08-22  Don Porter <dgp@users.sourceforge.net>

	* tests/ioUtil.test (ioUtil-3.*): Corrected errors in tests
	revealed by fix of overagressive compiler.  [Bug 451200]

2001-08-21  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclCompCmds.c:
	* tests/compile.test: Fixed overagressive compilation of [catch]:
	it was catching errors at substitution time. [Bug #219184]
	
2001-08-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/tcltest.test (tcltest-12.2): fixed test that would break
	when env vars weren't Tcl list friendly [Patch #454046] (stanton)

2001-08-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/http/http.tcl (geturl): added port number to Host:
	header to comply with HTTP/1.1 spec (RFC 2068).  [Bug #452217]

2001-08-16  David Gravereaux <davygrvy@pobox.com>

	* tools/tcl.wse.in:
	* tools/tcl.hpj.in:
	* win/tcl.hpj.in:  Removed -kb storage in CVS to ensure these text
	files are checked-out in the translation mode CVS is in.  Setting
	these as binary as part of an effort to make sure they are always
	in CRLF, no matter what the CVS translation, is bypassing how CVS
	works and is confusing.

	* tools/genStubs.tcl:  Removed LF-only output.  Having to reconvert
	back to CRLF before committing to CVS was giving me a headache.
	[Bug: 451333]

	* win/makefile.vc: replaced $(WINDIR) with $(include32) for the